--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "feathers-errors": "^2.9.2",
     "feathers-hooks": "^2.1.1",
     "feathers-hooks-common": "^3.10.0",
+    "feathers-nedb": "^2.7.0",
     "feathers-rest": "^1.8.0",
     "feathers-socketio": "^2.0.0",
     "helmet": "^3.9.0",
+    "nedb": "^1.8.0",
     "serve-favicon": "^2.4.5",
     "winston": "^2.4.0"
   },
